flexbox overflow fix

--- a/sass/custom/new.scss
+++ b/sass/custom/new.scss
@@ -284,10 +284,11 @@ header .header-inner #player-container {
 
     .flex-container {
       flex: 1;
+      overflow: hidden;
 
       .menu-list {
         font-size: 8vh;
-        
+
         ul.list-of-menu-items {
           .description-subtitle {
             font-size: .75em !important;
